terraform/security.tf
# -------------------------
# Security Groups
# -------------------------
resource "aws_security_group" "bastion_sg" {
  name        = "cloudlab-bastion-sg"
  description = "Allow SSH from my public IP"
  vpc_id      = aws_vpc.main.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "private_sg" {
  name        = "cloudlab-private-sg"
  description = "Allow SSH only from bastion"
  vpc_id      = aws_vpc.main.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
# -------------------------
# Security Group: ALB (public HTTP)
# -------------------------
resource "aws_security_group" "alb_sg" {
  name        = "cloudlab-alb-sg"
  description = "Public HTTP to ALB"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "HTTP from Internet"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "All egress"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = { Name = "cloudlab-alb-sg" }
}

resource "aws_security_group" "ssm_endpoints_sg" {
  name        = "cloudlab-ssm-endpoints-sg"
  description = "Allow HTTPS to SSM endpoints from within VPC"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
